--- a/Complete Responsive Website - Code/directions.html
+++ b/Complete Responsive Website - Code/directions.html
@@ -12,7 +12,7 @@
         <h1>DIRECTIONS</h1>
     </header>
 
-    <section>
+    <section class="directions-list">
         <ol>
             <li>STIR TOGETHER MILK AND VINEGAR; LET STAND FOR A FEW MINUTES UNTIL THICK.</li>
             <li>
@@ -32,6 +32,10 @@
             </li>
             <li>DUST WITH CONFECTIONERS' SUGAR WHILE THEY ARE STILL WARM AND SERVE.</li>
         </ol>
+    </section>
+
+    <section class="donut-pic">
+        <img src="pink donut.jpg" alt="picture of pink donut">
     </section>
 </body>
 </html>
