--- a/Complete Responsive Website - Code/ingredients.html
+++ b/Complete Responsive Website - Code/ingredients.html
@@ -12,7 +12,7 @@
         <h1>INGREDIENTS</h1>
     </header>
 
-    <section>
+    <section class="ingredients-list">
         <ul>
             <li>3/8 CUP MILK</li>
             <li>2 TABLESPOONS WHITE VINEGAR</li>
@@ -26,6 +26,10 @@
             <li>1 QUART OIL FOR DEEP FRYING</li>
             <li>1/2 CUP CONFECTIONERS' SUGAR FOR DUSTING</li>
         </ul>
+    </section>
+    
+    <section class="donut-pic">
+        <img src="pink donut.jpg" alt="picture of pink donut">
     </section>
 </body>
 </html>
