--- a/Complete Responsive Website - Code/mainpage.html
+++ b/Complete Responsive Website - Code/mainpage.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>HOW TO <br> MAKE DONUTS!</h1>
+        <h1>HOW TO MAKE DONUTS!</h1>
     </header>
     
     <section>
