final product desktop and mobile works

--- a/directions.html
+++ b/directions.html
@@ -34,7 +34,7 @@
         </ol>
     </section>
 
-    <section class="donut-pic">
+    <section>
         <img src="pink donut.jpg" alt="picture of pink donut">
     </section>
 </body>
