--- a/ingredients.html
+++ b/ingredients.html
@@ -28,7 +28,7 @@
         </ul>
     </section>
     
-    <section class="donut-pic">
+    <section>
         <img src="pink donut.jpg" alt="picture of pink donut">
     </section>
 </body>
